fix: responsive scrollbar

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -12,7 +12,6 @@
 
     @include mx.respond(xl, xxl) {
         max-width: 1440px;
-        height: 1024px;
     }
 }
 
